force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsCurrentHoldAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsCurrentHoldAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Absolute CurrentHoldAmount</description>
    <label>AbsCurrentHoldAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>