force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsCurrentReleaseAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsCurrentReleaseAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Absolute CurrentReleaseAmount</description>
    <label>AbsCurrentReleaseAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>