force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsHoldBalanceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsHoldBalanceAdjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Absolute HoldBalanceAdjustment</description>
    <label>AbsHoldBalanceAdjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>