force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsHoldBalanceValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsHoldBalanceValue__c</fullName>
    <formula>ABS(XactlyExpress__AbsPriorHoldAmountValue__c + XactlyExpress__AbsCurrentHoldAmount__c - XactlyExpress__AbsPriorReleaseAmount__c - XactlyExpress__AbsCurrentReleaseAmount__c - XactlyExpress__AbsHoldBalanceAdjustment__c - XactlyExpress__AbsPriorHoldBalanceAdjustment__c)</formula>
    <label>AbsHoldBalanceValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>