force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsoluteHoldBalance__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsoluteHoldBalance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AbsoluteHoldBalance</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>