force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsoluteHoldBalanceValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsoluteHoldBalanceValue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AbsoluteHoldBalanceValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>