force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsPriorHoldAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsPriorHoldAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Absolute PriorHoldAmount</description>
    <label>AbsPriorHoldAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>