force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsPriorHoldAmountValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsPriorHoldAmountValue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AbsPriorHoldAmountValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>