force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__AbsPriorHoldBalanceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__AbsPriorHoldBalanceAdjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Absolute PriorHoldBalanceAdjustment</description>
    <label>AbsPriorHoldBalanceAdjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>