force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__BeginCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__BeginCredit__c</fullName>
    <label>BeginCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>