force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__Comment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Comment__c</fullName>
    <label>Comment</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>