force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__CreditResultID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CreditResultID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreditResultID</label>
    <referenceTo>XactlyExpress__XCCreditResult__c</referenceTo>
    <relationshipLabel>XCMeasureResult</relationshipLabel>
    <relationshipName>XCMeasureResult</relationshipName>
    <type>Lookup</type>
</CustomField>