force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__CurrentReleaseAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CurrentReleaseAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CurrentReleaseAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>