force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__EndCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__EndCredit__c</fullName>
    <label>EndCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>