force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__IsStale__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IsStale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsStale</label>
    <type>Checkbox</type>
</CustomField>