force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__PayFrequency__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PayFrequency__c</fullName>
    <label>PayFrequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>