force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__PriorPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PriorPaidAmount__c</fullName>
    <label>PriorPaidAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>