force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__PriorReleaseAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PriorReleaseAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PriorReleaseAmount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>