force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__ProcessPlanID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProcessPlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProcessPlanID</label>
    <referenceTo>XactlyExpress__XCProcessPlan__c</referenceTo>
    <relationshipLabel>XCMeasureResultz</relationshipLabel>
    <relationshipName>XCMeasureResultz</relationshipName>
    <type>Lookup</type>
</CustomField>