force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/fields/XactlyExpress__ProfilePlanID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProfilePlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProfilePlanID</label>
    <referenceTo>XactlyExpress__XCProfilePlan__c</referenceTo>
    <relationshipLabel>XCMeasureResults</relationshipLabel>
    <relationshipName>XCMeasureResults</relationshipName>
    <type>Lookup</type>
</CustomField>