force-app/main/default/objects/XactlyExpress__XCMeasureResult__c/validationRules/XactlyExpress__Profile_Plan_Not_Null2.validationRule-meta.xml
<ValidationRule>
    <fullName>XactlyExpress__Profile_Plan_Not_Null2</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(XactlyExpress__ProfilePlanID__c)</errorConditionFormula>
    <errorDisplayField>XactlyExpress__ProfilePlanID__c</errorDisplayField>
    <errorMessage>Specify a profile plan</errorMessage>
</ValidationRule>